# loadsmith-canonical-plugins

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.json
.github/workflows/: release-plugin.yml
ci/: release.py
docs/: book.toml
docs/src/: SUMMARY.md  anatomy.md  building.md  distribution.md  installing.md  introduction.md  plugin-set.md
file/: Cargo.toml
file/src/: main.rs
jsonl/: Cargo.toml
jsonl/src/: main.rs  plugin.rs
local-copy/: Cargo.toml
local-copy/src/: main.rs  plugin.rs
null/: Cargo.toml
null/src/: main.rs  plugin.rs
parquet/: Cargo.toml
parquet/src/: main.rs  plugin.rs
postgres/: Cargo.toml
postgres/src/: conn.rs  copy.rs  destination.rs  lib.rs  source.rs  types.rs
