[package]
name    = "loadsmith-destination-jsonl"
version = "0.1.0"
edition = "2021"
license.workspace = true

[package.metadata.loadsmith]
name     = "jsonl"
summary  = "JSONL destination — writes rows as newline-delimited JSON"
protocol = "^1"
provides = [
    { kind = "destination", bin = "loadsmith-destination-jsonl" },
]

[[bin]]
name = "loadsmith-destination-jsonl"
path = "src/main.rs"

[dependencies]
tokio                = { workspace = true }
anyhow               = { workspace = true }
tracing              = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
async-trait          = { workspace = true }
arrow-array          = { workspace = true }
loadsmith-plugin-sdk = { workspace = true }
loadsmith-arrow      = { workspace = true }
