[package]
name    = "loadsmith-destination-parquet"
version = "0.1.0"
edition = "2021"
license.workspace = true

[package.metadata.loadsmith]
name     = "parquet"
summary  = "Parquet destination — single-file or chunked Parquet output"
protocol = "^1"
provides = [
    { kind = "destination", bin = "loadsmith-destination-parquet" },
]

[[bin]]
name = "loadsmith-destination-parquet"
path = "src/main.rs"

[dependencies]
tokio                = { workspace = true }
anyhow               = { workspace = true }
tracing              = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
async-trait          = { workspace = true }
arrow-array          = { workspace = true }
arrow-schema         = { workspace = true }
loadsmith-plugin-sdk = { workspace = true }

# Parquet writer — released in lockstep with `arrow` (shared major), so this
# must match arrow = "54". `bytesize` parses human sizes ("500KiB"); both pure
# Rust, keeping the multi-arch-first / pure-Rust posture.
parquet  = "54"
bytesize = "1"
